# Projet_Archilog

archilog-0.2/: data.db  dev.env  pyproject.toml
archilog-0.2/src/archilog/: models.py  services.py  views.py
archilog-0.2/src/archilog/templates/: create.html  interface.html  update.html
archilog-0.2/src/archilog/views/: __init__.py  cli.py  gui.py
